--- a/docker/api/Dockerfile.api
+++ b/docker/api/Dockerfile.api
@@ -1,4 +1,5 @@
-FROM matthieujln/bird-sound-classif:base
+ARG BASE_IMAGE
+FROM ${BASE_IMAGE}
 
 WORKDIR /app
 
@@ -9,9 +10,7 @@ RUN apt-get update && apt-get install -y curl
 COPY ./requirements.txt . 
 RUN pip install -r requirements.txt
 
-
 COPY . /app 
-
 
 # production:
 # RUN pip install --no-cache-dir -r requirements.txt
