--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,8 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
+#
+
 # Unit test / coverage reports
 htmlcov/
 .tox/
@@ -188,3 +190,7 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+# ruff
+.ruff_cache/
