--- a/docker/inference/Dockerfile.inference
+++ b/docker/inference/Dockerfile.inference
@@ -4,6 +4,7 @@ FROM ${BASE_IMAGE}
 WORKDIR /app
 
 # Development:
+RUN apt-get -y update && apt-get -y upgrade && apt-get install -y ffmpeg
 COPY ./requirements.txt . 
 RUN pip install -r requirements.txt
 
