--- a/requirements_ci.txt
+++ b/requirements_ci.txt
@@ -1,1 +1,9 @@
+pre-commit==3.7.1
 ruff==0.4.7
+pytest==8.2.1
+pytest-asyncio==0.23.7
+pytest-mock==3.14.0
+pytest-runner==6.0.1
+pytest-smtp==0.1
+pytest-smtpd==0.1.0
+httpx==0.27.0
