--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,14 @@ x-common-env: &common-env
     - MINIO_ROOT_USER=${MINIO_ROOT_USER}
     - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
 
+    - POSTGRES_USER=${POSTGRES_USER}
+    - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    - POSTGRES_HOST=${POSTGRES_HOST}
+    - POSTGRES_PORT=${POSTGRES_PORT}
+    - POSTGRES_NAME=${POSTGRES_NAME}
+
     - MH_LOG_LEVEL=error
+
 
 services:
 #============ [MAIN SERVICES] ============#
@@ -35,6 +42,7 @@ services:
       - minioserver
     networks:
       - internal
+    # entrypoint: ["/docker/api/entrypoint"]
     command: sh -c "sleep 5 && uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
     restart: always
 
@@ -50,6 +58,21 @@ services:
     restart: always
 
 #============ [BACKING SERVICES] ============#
+  postgres:
+    <<: *common-env
+    image: postgres
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    networks:
+      - internal
+    ports:
+      - "5435:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   rabbitmq:
     # RabbitMQ: container to container async messenger
     <<: *common-env
@@ -98,6 +121,7 @@ services:
 #============ [VOLUMES / NETWORKS] ============#
 volumes:
   minio-data:
+  postgres-data:
 
 networks:
   internal:
