--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,11 @@ MINIO_ROOT_PASSWORD=miniopassword
 # MinIO User Credentials
 AWS_ACCESS_KEY_ID=miniouser
 AWS_SECRET_ACCESS_KEY=miniouser123
+
+
+
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+POSTGRES_NAME=postgres
