--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ x-common-env: &common-env
     - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     - POSTGRES_HOST=${POSTGRES_HOST}
     - POSTGRES_PORT=${POSTGRES_PORT}
-    - POSTGRES_NAME=${POSTGRES_NAME}
+    - POSTGRES_DB=${POSTGRES_DB}
 
     - MH_LOG_LEVEL=error
 
