--- a/.env.example
+++ b/.env.example
@@ -16,4 +16,4 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
-POSTGRES_NAME=postgres
+POSTGRES_DB=postgres
